# ios-forensics-mcp

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  server.py  setup.py
docs/: ios-forensics-mcp-implementation-plan.md  ios-forensics-mcp-package-structure.md  ios-forensics-mcp-plan.md  ios-forensics-tools-spec.md
src/ios_forensics_mcp/: __init__.py  config_module.py  server.py
src/ios_forensics_mcp/tools/advanced/: reporting.py
src/ios_forensics_mcp/tools/filesystem/: file_reader.py  file_type.py
src/ios_forensics_mcp/tools/specialized/: applications.py  locations.py  messages.py
src/ios_forensics_mcp/tools/sqlite/: analyzer.py  wal_analyzer.py
src/ios_forensics_mcp/utils/: logging_utils.py
tools/filesystem/: directory.py  search.py
tools/plist/: parser.py
tools/sqlite/: freelist.py
utils/: path_utils.py  timestamp_utils.py
