[project]
name = "ios-forensics-mcp"
version = "0.1.0"
description = "iOS Forensics MCP Server for analyzing iPhone/iPad file systems"
readme = "README.md"
authors = [
    { name = "RLabs Inc.", email = "rodrigo@rlabs.com.br" }
]
license = {text = "MIT"}
repository = "https://github.com/RLabs-Inc/ios-forensics-mcp"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: System :: Forensics",
]

dependencies = [
    "biplist>=1.0.3",
    "mcp[cli]>=1.6.0",
    "pillow>=11.2.1",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
